--- a/environments/environments.yaml
+++ b/environments/environments.yaml
@@ -2,7 +2,7 @@
   deploys:
     version: "latest"
   config:
-    AZURE_LOCATION: "centraluseuap"
+    AZURE_LOCATION: "westeurope"
     AZURE_NAME_PREFIX: "validate-azure"
     WEBAPI_NODE_ENV: "production"
 - name: onprem
@@ -12,4 +12,4 @@
     AZURE_LOCATION: "centraluseuap"
     AZURE_NAME_PREFIX: "validate-arc-2"
     WEBAPI_NODE_ENV: "production"
-    APP_SERVICE_KUBERNETES_ENVIRONMENT_ID: "/subscriptions/2f291b88-9ebf-4d90-836f-ae532edaa1b0/resourceGroups/lc-lima-rg/providers/Microsoft.Web/kubeEnvironments/lc-kube"
+    APP_SERVICE_KUBERNETES_ENVIRONMENT_ID: "/subscriptions/f34b22a3-2202-4fb1-b040-1332bd928c84/resourceGroups/logicapps-k8se-04-rg/providers/Microsoft.Web/kubeEnvironments/logicapps-k8se-04-rg-kubeenv"
